@@ -1346,6 +1346,13 @@ class LMS
 				}
 
 				$assignments[$idx] = $row;
+				if ($row['discount'] == 0)
+					$assignments[$idx]['discounted_value'] = $row['value'];
+				else
+					$assignments[$idx]['discounted_value'] = $row['value'] * $row['discount'] / 100;
+				if ($row['suspended'] == 1)
+					$assignments[$idx]['discounted_value'] = $assignments[$idx]['discounted_value'] * $this->CONFIG['payments']['suspension_percentage'] / 100;
+				$assignments[$idx]['discounted_value'] = round($assignments[$idx]['discounted_value'], 2);
 			}
 		}
 
