@@ -62,7 +62,8 @@
 					<TD CLASS="ftop" NOWRAP ALIGN="RIGHT">{sum array=$assignments column="downrate" default="-"}({sum array=$assignments column="downceil" default="-"}) kbps</TD>
 					<TD CLASS="ftop" NOWRAP ALIGN="RIGHT">{sum array=$assignments column="uprate" default="-"}({sum array=$assignments column="upceil" default="-"}) kbps</TD>
 					<TD CLASS="ftop">&nbsp;</TD>
-					<TD CLASS="ftop" COLSPAN="3">&nbsp;</TD>
+					<TD CLASS="ftop" COLSPAN="2" NOWRAP ALIGN="RIGHT"><B>{t}Total with dicounts:{/t}</B></TD>
+					<TD CLASS="ftop" NOWRAP ALIGN="RIGHT">{sum array=$assignments column="discounted_value" string_format=$LANGDEFS.$_language.money_format}</TD>
 				</TR>
 				<FORM METHOD="POST" NAME="assignment" ACTION="?m=userassignments&action=add&id={$balancelist.userid}">
 				<TR bgcolor="#DFD5BD">
